--- a/Sort_Algorithm/Sort_Algorithm/Sort_Algorithm.vcxproj.filters
+++ b/Sort_Algorithm/Sort_Algorithm/Sort_Algorithm.vcxproj.filters
@@ -45,6 +45,9 @@
     <ClCompile Include="소스.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="가장 큰 수.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="OUT.h">
